y.output
Terminals unused in grammar

   READ
   WRITE
   WHILE
   IF
   ELSE
   CONTINUE
   LEFTBRACKET
   RIGHTBRACKET
   LESS
   LESSEQUAL
   GREATER
   GREATEREQUAL
   EQUALITY
   NOTEQUAL


State 67 conflicts: 5 shift/reduce
State 68 conflicts: 5 shift/reduce
State 69 conflicts: 5 shift/reduce
State 70 conflicts: 5 shift/reduce
State 71 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program function
    3        | COMMENT

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY
    5         | FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    6 new_parameters: %empty
    7               | new_parameter

    8 new_parameter: type TOKEN_IDENTIFIER
    9              | type TOKEN_IDENTIFIER COMMA new_parameter

   10 parameters: %empty
   11           | parameter

   12 parameter: TOKEN_IDENTIFIER
   13          | TOKEN_IDENTIFIER COMMA parameter

   14 statements: %empty
   15           | statements statement

   16 statement: new_variable
   17          | function_call
   18          | print
   19          | RETURN TOKEN_IDENTIFIER SEMICOLON
   20          | TOKEN_IDENTIFIER ASSIGN expressions SEMICOLON
   21          | COMMENT
   22          | BREAK SEMICOLON

   23 new_variable: type TOKEN_IDENTIFIER SEMICOLON
   24             | type TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON

   25 type: INT

   26 print: PRINT LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

   27 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters SEMICOLON

   28 expressions: %empty
   29            | expressions expression

   30 expression: NUMBER
   31           | TOKEN_IDENTIFIER
   32           | expression PLUS expression
   33           | expression SUBTRACT expression
   34           | expression MULTIPLY expression
   35           | expression DIVIDE expression
   36           | expression MODULUS expression


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNC (258) 4 5
RETURN (259) 19
INT (260) 25
PRINT (261) 26
BREAK (262) 22
LEFTPAREN (263) 4 5 26 27
RIGHTPAREN (264) 4 5 26
LEFTCURLY (265) 4 5
RIGHTCURLY (266) 4 5
COMMA (267) 9 13
SEMICOLON (268) 19 20 22 23 24 26 27
PLUS (269) 32
SUBTRACT (270) 33
MULTIPLY (271) 34
DIVIDE (272) 35
MODULUS (273) 36
ASSIGN (274) 20 24
NUMBER (275) 24 30
READ (276)
WRITE (277)
WHILE (278)
IF (279)
ELSE (280)
CONTINUE (281)
LEFTBRACKET (282)
RIGHTBRACKET (283)
LESS (284)
LESSEQUAL (285)
GREATER (286)
GREATEREQUAL (287)
EQUALITY (288)
NOTEQUAL (289)
COMMENT (290) 3 21
TOKEN_IDENTIFIER (291) 4 5 8 9 12 13 19 20 23 24 26 27 31


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1 2 3, on right: 0 2
function (39)
    on left: 4 5, on right: 2
new_parameters (40)
    on left: 6 7, on right: 4 5
new_parameter (41)
    on left: 8 9, on right: 7 9
parameters (42)
    on left: 10 11, on right: 27
parameter (43)
    on left: 12 13, on right: 11 13
statements (44)
    on left: 14 15, on right: 4 5 15
statement (45)
    on left: 16 17 18 19 20 21 22, on right: 15
new_variable (46)
    on left: 23 24, on right: 16
type (47)
    on left: 25, on right: 5 8 9 23 24
print (48)
    on left: 26, on right: 18
function_call (49)
    on left: 27, on right: 17
expressions (50)
    on left: 28 29, on right: 20 29
expression (51)
    on left: 30 31 32 33 34 35 36, on right: 29 32 33 34 35 36


State 0

    0 $accept: . program $end

    COMMENT  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program  go to state 2


State 1

    3 program: COMMENT .

    $default  reduce using rule 3 (program)


State 2

    0 $accept: program . $end
    2 program: program . function

    $end  shift, and go to state 3
    FUNC  shift, and go to state 4

    function  go to state 5


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 function: FUNC . TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY
    5         | FUNC . type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT               shift, and go to state 6
    TOKEN_IDENTIFIER  shift, and go to state 7

    type  go to state 8


State 5

    2 program: program function .

    $default  reduce using rule 2 (program)


State 6

   25 type: INT .

    $default  reduce using rule 25 (type)


State 7

    4 function: FUNC TOKEN_IDENTIFIER . LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN  shift, and go to state 9


State 8

    5 function: FUNC type . TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    TOKEN_IDENTIFIER  shift, and go to state 10


State 9

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN . new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT  shift, and go to state 6

    $default  reduce using rule 6 (new_parameters)

    new_parameters  go to state 11
    new_parameter   go to state 12
    type            go to state 13


State 10

    5 function: FUNC type TOKEN_IDENTIFIER . LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN  shift, and go to state 14


State 11

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters . RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    RIGHTPAREN  shift, and go to state 15


State 12

    7 new_parameters: new_parameter .

    $default  reduce using rule 7 (new_parameters)


State 13

    8 new_parameter: type . TOKEN_IDENTIFIER
    9              | type . TOKEN_IDENTIFIER COMMA new_parameter

    TOKEN_IDENTIFIER  shift, and go to state 16


State 14

    5 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN . new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT  shift, and go to state 6

    $default  reduce using rule 6 (new_parameters)

    new_parameters  go to state 17
    new_parameter   go to state 12
    type            go to state 13


State 15

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 18


State 16

    8 new_parameter: type TOKEN_IDENTIFIER .
    9              | type TOKEN_IDENTIFIER . COMMA new_parameter

    COMMA  shift, and go to state 19

    $default  reduce using rule 8 (new_parameter)


State 17

    5 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters . RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    RIGHTPAREN  shift, and go to state 20


State 18

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY . statements RIGHTCURLY

    $default  reduce using rule 14 (statements)

    statements  go to state 21


State 19

    9 new_parameter: type TOKEN_IDENTIFIER COMMA . new_parameter

    INT  shift, and go to state 6

    new_parameter  go to state 22
    type           go to state 13


State 20

    5 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 23


State 21

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements . RIGHTCURLY
   15 statements: statements . statement

    RETURN            shift, and go to state 24
    INT               shift, and go to state 6
    PRINT             shift, and go to state 25
    BREAK             shift, and go to state 26
    RIGHTCURLY        shift, and go to state 27
    COMMENT           shift, and go to state 28
    TOKEN_IDENTIFIER  shift, and go to state 29

    statement      go to state 30
    new_variable   go to state 31
    type           go to state 32
    print          go to state 33
    function_call  go to state 34


State 22

    9 new_parameter: type TOKEN_IDENTIFIER COMMA new_parameter .

    $default  reduce using rule 9 (new_parameter)


State 23

    5 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY . statements RIGHTCURLY

    $default  reduce using rule 14 (statements)

    statements  go to state 35


State 24

   19 statement: RETURN . TOKEN_IDENTIFIER SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 36


State 25

   26 print: PRINT . LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 37


State 26

   22 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 38


State 27

    4 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY .

    $default  reduce using rule 4 (function)


State 28

   21 statement: COMMENT .

    $default  reduce using rule 21 (statement)


State 29

   20 statement: TOKEN_IDENTIFIER . ASSIGN expressions SEMICOLON
   27 function_call: TOKEN_IDENTIFIER . LEFTPAREN parameters SEMICOLON

    LEFTPAREN  shift, and go to state 39
    ASSIGN     shift, and go to state 40


State 30

   15 statements: statements statement .

    $default  reduce using rule 15 (statements)


State 31

   16 statement: new_variable .

    $default  reduce using rule 16 (statement)


State 32

   23 new_variable: type . TOKEN_IDENTIFIER SEMICOLON
   24             | type . TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 41


State 33

   18 statement: print .

    $default  reduce using rule 18 (statement)


State 34

   17 statement: function_call .

    $default  reduce using rule 17 (statement)


State 35

    5 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements . RIGHTCURLY
   15 statements: statements . statement

    RETURN            shift, and go to state 24
    INT               shift, and go to state 6
    PRINT             shift, and go to state 25
    BREAK             shift, and go to state 26
    RIGHTCURLY        shift, and go to state 42
    COMMENT           shift, and go to state 28
    TOKEN_IDENTIFIER  shift, and go to state 29

    statement      go to state 30
    new_variable   go to state 31
    type           go to state 32
    print          go to state 33
    function_call  go to state 34


State 36

   19 statement: RETURN TOKEN_IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 43


State 37

   26 print: PRINT LEFTPAREN . TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 44


State 38

   22 statement: BREAK SEMICOLON .

    $default  reduce using rule 22 (statement)


State 39

   27 function_call: TOKEN_IDENTIFIER LEFTPAREN . parameters SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 45

    $default  reduce using rule 10 (parameters)

    parameters  go to state 46
    parameter   go to state 47


State 40

   20 statement: TOKEN_IDENTIFIER ASSIGN . expressions SEMICOLON

    $default  reduce using rule 28 (expressions)

    expressions  go to state 48


State 41

   23 new_variable: type TOKEN_IDENTIFIER . SEMICOLON
   24             | type TOKEN_IDENTIFIER . ASSIGN NUMBER SEMICOLON

    SEMICOLON  shift, and go to state 49
    ASSIGN     shift, and go to state 50


State 42

    5 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY .

    $default  reduce using rule 5 (function)


State 43

   19 statement: RETURN TOKEN_IDENTIFIER SEMICOLON .

    $default  reduce using rule 19 (statement)


State 44

   26 print: PRINT LEFTPAREN TOKEN_IDENTIFIER . RIGHTPAREN SEMICOLON

    RIGHTPAREN  shift, and go to state 51


State 45

   12 parameter: TOKEN_IDENTIFIER .
   13          | TOKEN_IDENTIFIER . COMMA parameter

    COMMA  shift, and go to state 52

    $default  reduce using rule 12 (parameter)


State 46

   27 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 47

   11 parameters: parameter .

    $default  reduce using rule 11 (parameters)


State 48

   20 statement: TOKEN_IDENTIFIER ASSIGN expressions . SEMICOLON
   29 expressions: expressions . expression

    SEMICOLON         shift, and go to state 54
    NUMBER            shift, and go to state 55
    TOKEN_IDENTIFIER  shift, and go to state 56

    expression  go to state 57


State 49

   23 new_variable: type TOKEN_IDENTIFIER SEMICOLON .

    $default  reduce using rule 23 (new_variable)


State 50

   24 new_variable: type TOKEN_IDENTIFIER ASSIGN . NUMBER SEMICOLON

    NUMBER  shift, and go to state 58


State 51

   26 print: PRINT LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 52

   13 parameter: TOKEN_IDENTIFIER COMMA . parameter

    TOKEN_IDENTIFIER  shift, and go to state 45

    parameter  go to state 60


State 53

   27 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters SEMICOLON .

    $default  reduce using rule 27 (function_call)


State 54

   20 statement: TOKEN_IDENTIFIER ASSIGN expressions SEMICOLON .

    $default  reduce using rule 20 (statement)


State 55

   30 expression: NUMBER .

    $default  reduce using rule 30 (expression)


State 56

   31 expression: TOKEN_IDENTIFIER .

    $default  reduce using rule 31 (expression)


State 57

   29 expressions: expressions expression .
   32 expression: expression . PLUS expression
   33           | expression . SUBTRACT expression
   34           | expression . MULTIPLY expression
   35           | expression . DIVIDE expression
   36           | expression . MODULUS expression

    PLUS      shift, and go to state 61
    SUBTRACT  shift, and go to state 62
    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64
    MODULUS   shift, and go to state 65

    $default  reduce using rule 29 (expressions)


State 58

   24 new_variable: type TOKEN_IDENTIFIER ASSIGN NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 59

   26 print: PRINT LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON .

    $default  reduce using rule 26 (print)


State 60

   13 parameter: TOKEN_IDENTIFIER COMMA parameter .

    $default  reduce using rule 13 (parameter)


State 61

   32 expression: expression PLUS . expression

    NUMBER            shift, and go to state 55
    TOKEN_IDENTIFIER  shift, and go to state 56

    expression  go to state 67


State 62

   33 expression: expression SUBTRACT . expression

    NUMBER            shift, and go to state 55
    TOKEN_IDENTIFIER  shift, and go to state 56

    expression  go to state 68


State 63

   34 expression: expression MULTIPLY . expression

    NUMBER            shift, and go to state 55
    TOKEN_IDENTIFIER  shift, and go to state 56

    expression  go to state 69


State 64

   35 expression: expression DIVIDE . expression

    NUMBER            shift, and go to state 55
    TOKEN_IDENTIFIER  shift, and go to state 56

    expression  go to state 70


State 65

   36 expression: expression MODULUS . expression

    NUMBER            shift, and go to state 55
    TOKEN_IDENTIFIER  shift, and go to state 56

    expression  go to state 71


State 66

   24 new_variable: type TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON .

    $default  reduce using rule 24 (new_variable)


State 67

   32 expression: expression . PLUS expression
   32           | expression PLUS expression .
   33           | expression . SUBTRACT expression
   34           | expression . MULTIPLY expression
   35           | expression . DIVIDE expression
   36           | expression . MODULUS expression

    PLUS      shift, and go to state 61
    SUBTRACT  shift, and go to state 62
    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64
    MODULUS   shift, and go to state 65

    PLUS      [reduce using rule 32 (expression)]
    SUBTRACT  [reduce using rule 32 (expression)]
    MULTIPLY  [reduce using rule 32 (expression)]
    DIVIDE    [reduce using rule 32 (expression)]
    MODULUS   [reduce using rule 32 (expression)]
    $default  reduce using rule 32 (expression)


State 68

   32 expression: expression . PLUS expression
   33           | expression . SUBTRACT expression
   33           | expression SUBTRACT expression .
   34           | expression . MULTIPLY expression
   35           | expression . DIVIDE expression
   36           | expression . MODULUS expression

    PLUS      shift, and go to state 61
    SUBTRACT  shift, and go to state 62
    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64
    MODULUS   shift, and go to state 65

    PLUS      [reduce using rule 33 (expression)]
    SUBTRACT  [reduce using rule 33 (expression)]
    MULTIPLY  [reduce using rule 33 (expression)]
    DIVIDE    [reduce using rule 33 (expression)]
    MODULUS   [reduce using rule 33 (expression)]
    $default  reduce using rule 33 (expression)


State 69

   32 expression: expression . PLUS expression
   33           | expression . SUBTRACT expression
   34           | expression . MULTIPLY expression
   34           | expression MULTIPLY expression .
   35           | expression . DIVIDE expression
   36           | expression . MODULUS expression

    PLUS      shift, and go to state 61
    SUBTRACT  shift, and go to state 62
    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64
    MODULUS   shift, and go to state 65

    PLUS      [reduce using rule 34 (expression)]
    SUBTRACT  [reduce using rule 34 (expression)]
    MULTIPLY  [reduce using rule 34 (expression)]
    DIVIDE    [reduce using rule 34 (expression)]
    MODULUS   [reduce using rule 34 (expression)]
    $default  reduce using rule 34 (expression)


State 70

   32 expression: expression . PLUS expression
   33           | expression . SUBTRACT expression
   34           | expression . MULTIPLY expression
   35           | expression . DIVIDE expression
   35           | expression DIVIDE expression .
   36           | expression . MODULUS expression

    PLUS      shift, and go to state 61
    SUBTRACT  shift, and go to state 62
    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64
    MODULUS   shift, and go to state 65

    PLUS      [reduce using rule 35 (expression)]
    SUBTRACT  [reduce using rule 35 (expression)]
    MULTIPLY  [reduce using rule 35 (expression)]
    DIVIDE    [reduce using rule 35 (expression)]
    MODULUS   [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)


State 71

   32 expression: expression . PLUS expression
   33           | expression . SUBTRACT expression
   34           | expression . MULTIPLY expression
   35           | expression . DIVIDE expression
   36           | expression . MODULUS expression
   36           | expression MODULUS expression .

    PLUS      shift, and go to state 61
    SUBTRACT  shift, and go to state 62
    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64
    MODULUS   shift, and go to state 65

    PLUS      [reduce using rule 36 (expression)]
    SUBTRACT  [reduce using rule 36 (expression)]
    MULTIPLY  [reduce using rule 36 (expression)]
    DIVIDE    [reduce using rule 36 (expression)]
    MODULUS   [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)
